Add admin dashboard, chat and new features